ghc-4335c07/testsuite/tests/rename/should_fail/T12681a.hs
module T12681a where
  data A = A { a :: Int }
